kubernetes/manifests/caddy/hm-prefect-caddy-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hm-caddy-ingress
  namespace: hm-prefect
  annotations:
    kubernetes.io/ingress.class: caddy
  labels:
    app.kubernetes.io/name: ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prefect-orion
                port:
                  number: 4200
